# ConsMLP_lw

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
benchmarks/: dsp_7400_lut_1110000_fd_2220000.hgr.part.5  ibm13.hgr
compare_runs/: case1.hgr  run_compare.py
compare_runs/xml/: dsp7400_4p_loose.xml  dsp7400_4p_u80.xml
include/coarsening/: Coarsener.h  MultilevelCoarsener.h
include/datastructures/: Hypergraph.h  HypergraphHierarchy.h  NodeType.h
include/partitioning/: MultilevelPartitioner.h  Partition.h  PartitionConstraints.h  PartitionMetrics.h  Partitioner.h
include/refinement/: Refiner.h
include/utils/: Configuration.h  HgrParser.h  Profiler.h  Timer.h  Types.h
src/: ConsMLP_lw.cpp
src/coarsening/: Coarsener.cpp  MultilevelCoarsener.cpp
src/datastructures/: Hypergraph.cpp  HypergraphHierarchy.cpp
src/partitioning/: MultilevelPartitioner.cpp  Partition.cpp  PartitionConstraints.cpp  PartitionMetrics.cpp  Partitioner.cpp
src/refinement/: Refiner.cpp
src/utils/: HgrParser.cpp
tools/: gen_xml_from_types.sh
